# projecteuler-ocaml

./: .dir-locals.el  .gitignore  .merlin  CHANGES.md  LICENSE.md  Makefile  README.md  TODO.org  TODOs.org  benchmark-divisors.txt  benchmark-rle.txt  benchmark-sqrt.txt  default.nix  dune  dune-project  euler.ml  euler.mli  euler.opam  flake.nix  release.nix  run-solutions.sh  shell.nix  sol_003.ml  sol_004.ml  sol_006.ml  sol_010_mut.ml  solution.ml
bench/: dune  euler_benchmark.ml  euler_benchmark.mli  main.ml  runner.sh
bench/src/: bench_divisors.ml  bench_is_prime.ml  bench_pow.ml  bench_prime_sieve.ml  bench_run_length_encode.ml  bench_sqrt.ml  dune  import.ml
data/: dune  dune.inc  euler_data.ml  gen-data.sh  gen-dune.sh  gen-problem.sh  generate_jbuild.ml  import.ml  jbuild  parse.ml  parse.mli  problem_008.ml  problem_011.ml  problem_013.ml  problem_018.ml  problem_022.ml  problem_042.ml  problem_067.ml
diagrams/587/: sketch.gsp
diagrams/727/: 727.ggb
doc/: benchmark-pow.txt  benchmark-primes.txt
doc/641/: doc.tex
doc/659/: 659.sh  Makefile  sum.hs
sol/: dune  euler_solutions.cppo.ml  euler_solutions.ml  euler_solutions.mli  import.ml  jbuild  module-list.pl  sol_001.ml  sol_002.ml  sol_003.ml  sol_004.ml  sol_005.ml  sol_006.ml  sol_007.ml  sol_008.ml  sol_009.ml  sol_010.ml  sol_010_seq.ml  sol_011.ml  sol_012.ml  sol_013.ml  sol_014.ml  sol_014_memo_opt.ml  sol_014_memo_slower.ml  sol_014_memo_slower.mli  sol_014_naive.ml  sol_015.ml  sol_016.ml  sol_017.ml  sol_018.ml  sol_018.mli  sol_019.ml  sol_020.ml  sol_021.ml  sol_022.ml  sol_023.ml  sol_024.ml  sol_025.ml  sol_026.ml  sol_027.ml  (+115 more)
sol/lib/: debug_printing.ml  debug_printing.mli  dune  euler_solution_helpers.ml  import.ml  solution.ml  solution.mli  solution_intf.ml
src/: algebra.ml  algebra.mli  benchmark.ml  bitset.ml  bitset.mli  composition_infix.ml  composition_infix.mli  debug_printing.mli  distribution.ml  distribution.mli  distribution_intf.ml  dune  euler.ml  euler.mli  geometry.ml  geometry.mli  import.ml  interfaces.ml  jbuild  main.ml  memo.ml  memo.mli  number_theory.ml  number_theory.mli  number_theory_intf.ml  numerics.ml  numerics.mli  numerics_intf.ml  poker.ml  poker.mli  sequences.ml  sequences.mli  sol_001.ml  sol_002.ml  sol_003.ml  sol_004.ml  sol_005.ml  sol_006.ml  sol_007.ml  sol_008.ml  (+68 more)
test/: dune  import.ml  jbuild  test_algebra.ml  test_bezout.ml  test_bitset.ml  test_chinese_remainder_theorem.ml  test_digits.ml  test_distribution.ml  test_factorial_prime_factor.ml  test_integrate.ml  test_number_theory.ml  test_sequences.ml  test_util.ml
test/lib/: import.ml  jbuild  test_algebra.ml  test_bezout.ml  test_chinese_remainder_theorem.ml  test_distribution.ml  test_factorial_prime_factor.ml  test_lib.ml  test_number_theory.ml  test_util.ml
