opam-version: "2.0"
version: "0.3.0"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: "Aaron L. Zeng <me@bcc32.com>"
homepage: "https://github.com/bcc32/projecteuler-ocaml"
bug-reports: "https://github.com/bcc32/projecteuler-ocaml/issues"
dev-repo: "git://github.com/bcc32/projecteuler-ocaml.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}

  "bignum"                     {>= "v0.11.0" & < "v0.12.0"}
  "core"                       {>= "v0.11.0" & < "v0.12.0"}
  "core_bench"                 {>= "v0.11.0" & < "v0.12.0"}
  "expect_test_helpers_kernel" {>= "v0.11.0" & < "v0.12.0"}

  "re" {>= "1.0" & < "2.0"}
]
