opam-version: "2.0"
synopsis: "Solutions to ProjectEuler problems in OCaml"
description: """
My solutions to ProjectEuler problems in OCaml.  Don't spoil yourself, please!
"""
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: "Aaron L. Zeng <me@bcc32.com>"
homepage: "https://github.com/bcc32/projecteuler-ocaml"
bug-reports: "https://github.com/bcc32/projecteuler-ocaml/issues"
dev-repo: "git://github.com/bcc32/projecteuler-ocaml.git"
build: [
  ["dune" "subst"]                       {pinned}
  ["dune" "build"   "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}

  "bignum"                     {>= "v0.12.0" & < "v0.13.0"}
  "core"                       {>= "v0.12.0" & < "v0.13.0"}
  "core_bench"                 {>= "v0.12.0" & < "v0.13.0"}
  "delimited_parsing"          {>= "v0.12.0" & < "v0.13.0"}
  "expect_test_helpers_kernel" {>= "v0.12.0" & < "v0.13.0"}

  "cmdliner" {>= "1.0.0" & < "2.0.0"}
  "re" {>= "1.0" & < "2.0"}
]
