;; generate dune rules
;;
;; see https://jbuilder.readthedocs.io/en/latest/dune-files.html#include for
;; example

(include dune.inc)

(rule
 (targets dune.inc.gen)
 (deps
  (glob_files *.txt))
 (action
  (with-stdout-to
   %{targets}
   (run ./gen-dune.sh))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))

(rule
 (alias runtest)
 (deps
  (glob_files *.sh))
 (action
  (run shellcheck %{deps})))

(library
 (name euler_data)
 (libraries core delimited_parsing re)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets euler_data.ml)
 (deps
  (glob_files *.txt))
 (action
  (with-stdout-to
   %{targets}
   (run ./gen-data.sh))))
