(library
 (name euler_solutions)
 (synopsis "A collection of OCaml solutions to ProjectEuler problems")
 (libraries bignum core core_kernel.total_map euler euler_data
   euler_solution_helpers expect_test_helpers_kernel re)
 (preprocess
  (pps ppx_jane))
 (inline_tests)
 (modules
  (:standard \ template)))

(rule
 (targets euler_solutions.ml)
 (deps
  (:script ./module-list.pl)
  (glob_files sol*.ml))
 (action
  (with-stdout-to
   %{targets}
   (run %{script}))))
