(library
 (name euler_solutions)
 (synopsis "A collection of OCaml solutions to ProjectEuler problems")
 (libraries bignum core core_kernel.total_map euler euler_data
   euler_solution_helpers expect_test_helpers_kernel re)
 (preprocess
  (pps ppx_jane))
 (inline_tests)
 (modules
  (:standard \ template)))

(rule
 (targets euler_solutions.ml)
 (deps
  (:script ./module-list.pl)
  (glob_files sol*.ml))
 (action
  (with-stdout-to
   %{targets}
   (run %{script}))))

(rule
 (targets solutions_without_answer_expect_tests.txt.gen)
 (deps
  (glob_files sol*.ml))
 (action
  (with-stdout-to
   %{targets}
   (run grep -L "\\<expect_test\\>.*\\<answer\\>" --exclude=*.pp.ml %{deps}))))

(alias
 (name runtest)
 (action
  (diff solutions_without_answer_expect_tests.txt
    solutions_without_answer_expect_tests.txt.gen)))
